<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/distancia"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:id="@+id/textDistance"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_filed_kilometros"
        android:textColor="@color/black"
       android:layout_gravity="center"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:id="@+id/textLiter"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/preco_por_litro"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/textAutomy"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/km_por_litro"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/seu_gasto_sera"
        android:textColor="@color/gray"
        android:layout_gravity="center"
        android:textSize="25sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/r_0"
        android:textColor="@color/gray"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:id="@+id/textValue"

        />
    <Button
        android:text="@string/calcular"
        android:padding="15dp"
        android:id="@+id/buttonCalculete"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_light"
        />


</LinearLayout>